--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,11 +23,14 @@ jobs:
   tag-latest:
     needs: [build]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: [amd64, arm64]
     steps:
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
     - name: pull
-      run: docker pull rdohna/wildfly:jdk-11
+      run: docker pull --platform ${{matrix.platform}} rdohna/wildfly:jdk-11
     - name: tag
       run: docker tag rdohna/wildfly:jdk-11 rdohna/wildfly
     - name: push tag
