wildfly version matrix

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,6 +3,10 @@ name: Build and push Docker image
 on:
   push:
     branches: [ master ]
+env:
+  # these are used for the latest tag
+  latest-jdk: 11
+  latest-wf: 25.0.1.Final
 
 jobs:
   build:
@@ -10,6 +14,10 @@ jobs:
     strategy:
       matrix:
         java: [8, 11]
+        wf:
+        - 26.0.0.Final
+        - 25.0.1.Final
+        - 24.0.1.Final
     name: build with jdk ${{matrix.java}}
     steps:
     - uses: actions/checkout@v2
@@ -18,7 +26,7 @@ jobs:
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
     - name: build and push the images
-      run: docker buildx build --push --platform linux/arm64,linux/amd64 --tag rdohna/wildfly:jdk-${{matrix.java}} --build-arg JDK_VERSION=${{matrix.java}} .
+      run: docker buildx build --push --platform linux/arm64,linux/amd64 --tag rdohna/wildfly:${{matrix.wf}}-jdk-${{matrix.java}} --build-arg JDK_VERSION=${{matrix.java}} --build-arg WILDFLY_VERSION=${{matrix.wf}} .
 
   tag-latest:
     needs: [build]
@@ -30,8 +38,8 @@ jobs:
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
     - name: pull
-      run: docker pull --platform ${{matrix.platform}} rdohna/wildfly:jdk-11
+      run: docker pull --platform ${{matrix.platform}} rdohna/wildfly:jdk-${{latest-jdk}}
     - name: tag
-      run: docker tag rdohna/wildfly:jdk-11 rdohna/wildfly
+      run: docker tag rdohna/wildfly:${{latest-wf}}-jdk-${{latest-jdk}} rdohna/wildfly
     - name: push tag
       run: docker push rdohna/wildfly:latest
