env tag-latest -> pseudo matrix

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,16 +30,15 @@ jobs:
     strategy:
       matrix:
         platform: [amd64, arm64]
-    env:
-      # these are used for the latest tag
-      LATEST_JDK: 11
-      LATEST_WF: 25.0.1.Final
+        # these are used for the latest tag
+        latestJdk: [11]
+        latestWf: [25.0.1.Final]
     steps:
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
     - name: pull
-      run: docker pull --platform ${{matrix.platform}} rdohna/wildfly:jdk-${{LATEST_JDK}}
+      run: docker pull --platform ${{matrix.platform}} rdohna/wildfly:jdk-${{latestJdk}}
     - name: tag
-      run: docker tag rdohna/wildfly:${{LATEST_WF}}-jdk-${{LATEST_JDK}} rdohna/wildfly
+      run: docker tag rdohna/wildfly:${{latestWf}}-jdk-${{latestJdk}} rdohna/wildfly
     - name: push tag
       run: docker push rdohna/wildfly:latest
