--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
     - name: build and push the images
-      run: docker buildx build --push --platform linux/arm64,linux/amd64 --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}} --build-arg JDK_VERSION=${{matrix.jdk}} .
+      run: docker buildx build --push --platform linux/arm64,linux/amd64 --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}} --build-arg JDK_VERSION=${{matrix.jdk}} --build-arg WILDFLY_VERSION=${{matrix.wf}} .
 
   tag-latest:
     needs: [build]
