build other wf versions again

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,10 @@ jobs:
       matrix:
         jdk: [8, 11]
         wf:
-#        - 26.0.0.Final
+        - 26.0.0.Final
         - 25.0.1.Final
-#        - 24.0.1.Final
-    name: build ${{matrix.wf}} with jdk ${{matrix.jdk}}
+        - 24.0.1.Final
+    name: ${{matrix.wf}}-${{matrix.jdk}}
     steps:
     - uses: actions/checkout@v2
     - uses: docker/setup-qemu-action@v1
