--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches: [ master ]
 env:
-  # this is used for the `latest` tag, i.e. the supposedly most stable combination
-  LATEST_TAG: 26.0.1.Final-jdk11
+  # these are used for the `latest` tag, i.e. the supposedly most stable combination
+  LATEST_WILDFLY: 26.0.1.Final
+  LATEST_JDK: jdk11
 
 jobs:
   build:
@@ -23,21 +24,16 @@ jobs:
     - uses: docker/setup-buildx-action@v1
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
+    - name: set final_tag
+      run: echo "final_tag=--tag rdohna/wildfly:latest" >> $GITHUB_ENV
+      if: ${{matrix.wf == LATEST_WILDFLY && matrix.jdk == LATEST_JDK}}
+    - name: echo final_tag
+      run: echo ${{final_tag}}
     - name: build and push the images
-      run: docker buildx build --push --platform linux/arm64,linux/amd64 --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}} --build-arg JDK_VERSION=${{matrix.jdk}} --build-arg WILDFLY_VERSION=${{matrix.wf}} .
-
-  tag-latest:
-    needs: [build]
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        platform: [arm64,amd64]
-    steps:
-    - name: login to docker hub
-      run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
-    - name: pull
-      run: docker pull --platform ${{matrix.platform}} rdohna/wildfly:${{env.LATEST_TAG}}
-    - name: tag
-      run: docker tag rdohna/wildfly:${{env.LATEST_TAG}} rdohna/wildfly
-    - name: push tag
-      run: docker push rdohna/wildfly:latest
+      run: >
+        docker buildx build --push --platform linux/arm64,linux/amd64
+        --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}}
+        ${{final_tag}}
+        --build-arg JDK_VERSION=${{matrix.jdk}}
+        --build-arg WILDFLY_VERSION=${{matrix.wf}}
+        .
