--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,16 +24,16 @@ jobs:
     - uses: docker/setup-buildx-action@v1
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
-    - name: set final_tag
-      run: echo "final_tag=--tag rdohna/wildfly:latest" >> $GITHUB_ENV
-      if: ${{matrix.wf == LATEST_WILDFLY && matrix.jdk == LATEST_JDK}}
-    - name: echo final_tag
-      run: echo ${{final_tag}}
+    - name: set FINAL_TAG
+      run: echo "FINAL_TAG=--tag rdohna/wildfly:latest" >> $GITHUB_ENV
+      if: ${{matrix.wf == env.LATEST_WILDFLY && matrix.jdk == env.LATEST_JDK}}
+    - name: echo FINAL_TAG
+      run: echo ${{env.FINAL_TAG}}
     - name: build and push the images
       run: >
         docker buildx build --push --platform linux/arm64,linux/amd64
         --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}}
-        ${{final_tag}}
+        ${{env.FINAL_TAG}}
         --build-arg JDK_VERSION=${{matrix.jdk}}
         --build-arg WILDFLY_VERSION=${{matrix.wf}}
         .
