try to fix latest tag

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,10 @@ jobs:
     - uses: docker/setup-buildx-action@v1
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
+    - name: echo tags
+      run: >
+        echo "${{matrix.wf}} == {{env.LATEST_WILDFLY}} = ${{matrix.wf == env.LATEST_WILDFLY}} &&
+        ${{matrix.jdk}} == ${{env.LATEST_JDK}} = ${{matrix.jdk == env.LATEST_JDK}}
     - name: set FINAL_TAG
       run: echo "FINAL_TAG=--tag rdohna/wildfly:latest" >> $GITHUB_ENV
       if: ${{matrix.wf == env.LATEST_WILDFLY && matrix.jdk == env.LATEST_JDK}}
