build graphql tags

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,11 +27,19 @@ jobs:
     - name: set FINAL_TAG
       run: echo "FINAL_TAG=--tag rdohna/wildfly:latest" >> $GITHUB_ENV
       if: ${{matrix.wf == env.LATEST_WILDFLY && matrix.jdk == env.LATEST_JDK}}
-    - name: build and push the images
+    - name: build and push the base image
       run: >
         docker buildx build --push --platform linux/arm64,linux/amd64
         --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}}
-        ${{env.FINAL_TAG}}
         --build-arg JDK_VERSION=${{matrix.jdk}}
         --build-arg WILDFLY_VERSION=${{matrix.wf}}
         .
+    - name: build and push the graphql image
+      run: >
+        docker buildx build --push --platform linux/arm64,linux/amd64
+        --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}}-graphql
+        ${{env.FINAL_TAG}}
+        --build-arg JDK_VERSION=${{matrix.jdk}}
+        --build-arg WILDFLY_VERSION=${{matrix.wf}}
+        --build-arg WILDFLY_GRAPHQL_VERSION=1.6.0.Final
+        --file Dockerfile-graphql
