--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,8 +24,8 @@ jobs:
     - uses: docker/setup-buildx-action@v1
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u rdohna --password-stdin
-    - name: set FINAL_TAG
-      run: echo "FINAL_TAG=--tag rdohna/wildfly:latest" >> $GITHUB_ENV
+    - name: set LATEST_TAG
+      run: echo "LATEST_TAG=--tag rdohna/wildfly:latest" >> $GITHUB_ENV
       if: ${{matrix.wf == env.LATEST_WILDFLY && matrix.jdk == env.LATEST_JDK}}
     - name: build and push the base image
       run: >
@@ -37,7 +37,7 @@ jobs:
       run: >
         docker buildx build . --push --platform linux/arm64,linux/amd64
         --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}}-graphql
-        ${{env.FINAL_TAG}}
+        ${{env.LATEST_TAG}}
         --build-arg JDK_VERSION=${{matrix.jdk}}
         --build-arg WILDFLY_VERSION=${{matrix.wf}}
         --build-arg GRAPHQL_FEATURE_PACK_VERSION=1.6.0.Final
