--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches: [ master ]
 env:
+  WILDFLY_25: 25.0.1.Final
+  WILDFLY_26: 26.0.1.Final
   # these are used for the `latest` tag, i.e. the supposedly most stable combination
-  LATEST_WILDFLY: 26.0.1.Final
+  LATEST_WILDFLY: ${{WILDFLY_26}}
   LATEST_JDK: 11
 
 jobs:
@@ -15,8 +17,8 @@ jobs:
       matrix:
         jdk: [8, 11, 17]
         wf:
-        - 26.0.1.Final
-        - 25.0.1.Final
+        - ${{WILDFLY_25}}
+        - ${{WILDFLY_26}}
     name: ${{matrix.wf}}-${{matrix.jdk}}
     steps:
     - uses: actions/checkout@v2
@@ -33,6 +35,14 @@ jobs:
         --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}}
         --build-arg JDK_VERSION=${{matrix.jdk}}
         --build-arg WILDFLY_VERSION=${{matrix.wf}}
+
+    - name: set graphql feature pack version 25
+      run: echo "GRAPHQL_FEATURE_PACK_VERSION=1.4.2.Final" >> $GITHUB_ENV
+      if: ${{matrix.wf == env.WILDFLY_25}}
+    - name: set graphql feature pack version 26
+      run: echo "GRAPHQL_FEATURE_PACK_VERSION=1.6.0.Final" >> $GITHUB_ENV
+      if: ${{matrix.wf == env.WILDFLY_26}}
+
     - name: build and push the graphql image
       run: >
         docker buildx build . --push --platform linux/arm64,linux/amd64
@@ -40,6 +50,5 @@ jobs:
         ${{env.LATEST_TAG}}
         --build-arg JDK_VERSION=${{matrix.jdk}}
         --build-arg WILDFLY_VERSION=${{matrix.wf}}
-        --build-arg GRAPHQL_FEATURE_PACK_VERSION=1.6.0.Final
+        --build-arg GRAPHQL_FEATURE_PACK_VERSION=${{env.GRAPHQL_FEATURE_PACK_VERSION}}
         --file Dockerfile-graphql
-      if: ${{matrix.wf == env.LATEST_WILDFLY}}
