--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,7 @@ jobs:
       if: ${{matrix.wf == '25.0.1.Final'}}
     - name: set graphql feature pack version 26
       run: echo "GRAPHQL_FEATURE_PACK_VERSION=1.6.0.Final" >> $GITHUB_ENV
-      if: ${{matrix.wf == '26.0.1.Final'}}
+      if: ${{matrix.wf == '26.0.1.Final' || matrix.wf == '26.1.0.Final'}}
 
     - name: build and push the graphql image
       run: >
