--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,6 +6,7 @@ on:
 env:
   POSTGRESQL: 42.3.4
   GRAPHQL_FEATURE_PACK_VERSION: 1.8.0.Final
+  GRAPHQL_FEATURE_PACK_WILDFLY_VERSION: 26.0.0.Final
   # these are used for the `latest` tag, i.e. the supposedly most stable combination
   LATEST_WILDFLY: 26.1.2.Final
   LATEST_JDK: 11
@@ -47,6 +48,7 @@ jobs:
         --build-arg JDK_VERSION=${{matrix.jdk}}
         --build-arg WILDFLY_VERSION=${{matrix.wf}}
         --build-arg GRAPHQL_FEATURE_PACK_VERSION=${{env.GRAPHQL_FEATURE_PACK_VERSION}}
+        --build-arg GRAPHQL_FEATURE_PACK_WILDFLY_VERSION=${{env.GRAPHQL_FEATURE_PACK_WILDFLY_VERSION}}
         --build-arg POSTGRESQL_VERSION=${{env.POSTGRESQL}}
         --file Dockerfile-graphql
       if: ${{matrix.jdk > 8 || !startsWith(matrix.wf, '27.')}}
