use BASE_VERSION for the base image for GraphQL`

--- a/Dockerfile-graphql
+++ b/Dockerfile-graphql
@@ -1,8 +1,5 @@
-ARG JDK_VERSION
-ARG WILDFLY_VERSION
-FROM rdohna/wildfly:${WILDFLY_VERSION}-jdk${JDK_VERSION}
-# we need to redefine ARG WILDFLY_VERSION, so it's still available after the FROM
-ARG WILDFLY_VERSION
+ARG BASE_VERSION
+FROM rdohna/wildfly:${BASE_VERSION}
 ARG GRAPHQL_FEATURE_PACK_VERSION
 ARG GRAPHQL_FEATURE_PACK_WILDFLY_VERSION
 
