--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -57,8 +57,7 @@ jobs:
         --tag rdohna/wildfly:${{env.MAJOR_MINOR_TAG}}-jdk${{matrix.jdk}}-graphql
         --tag rdohna/wildfly:${{env.matrix.wf}}-jdk${{matrix.jdk}}-graphql
         ${{env.LATEST_TAG}}
-        --build-arg JDK_VERSION=${{matrix.jdk}}
-        --build-arg WILDFLY_VERSION=${{matrix.wf}}
+        --build-arg BASE_VERSION=${{env.MAJOR_MINOR_TAG}}-jdk${{matrix.jdk}}
         --build-arg GRAPHQL_FEATURE_PACK_VERSION=${{env.GRAPHQL_FEATURE_PACK_VERSION}}
         --build-arg GRAPHQL_FEATURE_PACK_WILDFLY_VERSION=${{env.GRAPHQL_FEATURE_PACK_WILDFLY_VERSION}}
         --build-arg POSTGRESQL_VERSION=${{env.POSTGRESQL}}
