--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         wf: # only one major/minor version! see get-wf-tag
         - 26.0.1.Final
         - 26.1.2.Final
-        - 27.0.0.Beta1
+        - 27.0.0.Final
     name: ${{matrix.wf}}-${{matrix.jdk}}
     steps:
     - uses: actions/checkout@v2
