--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,8 +5,6 @@ on:
     branches: [ master ]
 env:
   POSTGRESQL: 42.3.4
-  GRAPHQL_FEATURE_PACK_VERSION: 1.8.0.Final
-  GRAPHQL_FEATURE_PACK_WILDFLY_VERSION: 26.0.0.Final
   # these are used for the `latest` tag, i.e. the supposedly most stable combination
   LATEST_WILDFLY: 27.0.1.Final
   LATEST_JDK: 17
@@ -16,12 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        jdk: [8, 11, 17]
+        jdk: [ 11, 17 ]
         wf: # only one major/minor version! see get-wf-tag
         - 26.0.1.Final
         - 26.1.3.Final
         - 27.0.1.Final
-        - 28.0.0.Final
+        - 28.0.1.Final
     name: ${{matrix.wf}}-${{matrix.jdk}}
     steps:
     - uses: actions/checkout@v3
@@ -52,9 +50,18 @@ jobs:
         --build-arg JDK_VERSION=${{matrix.jdk}}
         --build-arg WILDFLY_VERSION=${{matrix.wf}}
         --build-arg POSTGRESQL_VERSION=${{env.POSTGRESQL}}
-      if: ${{matrix.jdk > 8 || !startsWith(matrix.wf, '27.')}}
 
-    - name: build and push the graphql image
+
+    - name: set GraphQL Feature Pack Version (26)
+      run:
+        echo "GRAPHQL_FEATURE_PACK_VERSION=1.8.0.Final" >> $GITHUB_ENV
+      if: ${{startsWith(matrix.wf, '26.')}}
+    - name: set GraphQL Feature Pack Version (27)
+      run:
+        echo "GRAPHQL_FEATURE_PACK_VERSION=2.0.0.Final" >> $GITHUB_ENV
+      if: ${{!startsWith(matrix.wf, '26.')}}
+
+    - name: build and push the graphql image (26)
       run: >
         docker buildx build . --push --platform linux/arm64,linux/amd64
         --tag rdohna/wildfly:${{env.MAJOR_MINOR_TAG}}-jdk${{matrix.jdk}}-graphql
@@ -62,7 +69,5 @@ jobs:
         ${{env.LATEST_TAG}}
         --build-arg BASE_VERSION=${{env.MAJOR_MINOR_TAG}}-jdk${{matrix.jdk}}
         --build-arg GRAPHQL_FEATURE_PACK_VERSION=${{env.GRAPHQL_FEATURE_PACK_VERSION}}
-        --build-arg GRAPHQL_FEATURE_PACK_WILDFLY_VERSION=${{env.GRAPHQL_FEATURE_PACK_WILDFLY_VERSION}}
-        --build-arg POSTGRESQL_VERSION=${{env.POSTGRESQL}}
+        --build-arg GRAPHQL_FEATURE_PACK_WILDFLY_VERSION=${{env.MAJOR_VERSION_TAG}}.0.0
         --file Dockerfile-graphql
-      if: ${{matrix.jdk > 8 || !startsWith(matrix.wf, '27.')}}
