--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,8 @@ jobs:
       matrix:
         jdk: [ 11, 17 ]
         wf: # only one major/minor version! see get-wf-tag
+        - 26.0.1.Final
+        - 26.1.3.Final
         - 27.0.1.Final
         - 28.0.1.Final
     name: ${{matrix.wf}}-${{matrix.jdk}}
@@ -37,17 +39,8 @@ jobs:
           const split = "${{matrix.wf}}".split('.');
           return `${split[0]}.${split[1]}`
         result-encoding: string
-    - id: get-wf-tag-major
-      uses: actions/github-script@v6.4.1
-      with:
-        script: |
-          const split = "${{matrix.wf}}".split('.');
-          return `${split[0]}`
-        result-encoding: string
     - name: set wf major minor version env
       run: echo "MAJOR_MINOR_WF_VERSION=${{steps.get-wf-tag-major-minor.outputs.result}}" >> $GITHUB_ENV
-    - name: set wf major minor version env
-      run: echo "MAJOR_WF_VERSION=${{steps.get-wf-tag-major.outputs.result}}" >> $GITHUB_ENV
 
     - name: build and push the base image
       run: >
@@ -59,9 +52,19 @@ jobs:
         --build-arg POSTGRESQL_VERSION=${{env.POSTGRESQL}}
 
 
-    - name: set GraphQL Feature Pack Version
+    - name: set GraphQL Feature Pack URL
       run:
-        echo "GRAPHQL_FEATURE_PACK_VERSION=2.1.0.Final" >> $GITHUB_ENV
+        case "${{MAJOR_MINOR_WF_VERSION}}" in
+        26.0|26.1)
+          PATH=1.8.0.Final/wildfly-26.0.0.Final-mp-graphql-1.8.0.Final-overlay.zip
+          ;;
+        27.0)
+          PATH=2.0.0.Final/wildfly-27.0.0.Final-mp-graphql-2.0.0.Final-overlay.zip
+          ;;
+        28.0)
+          PATH=2.1.0.Final/wildfly-28.0.0.Final-mp-graphql-2.1.0.Final-SNAPSHOT-overlay.zip
+          ;;
+        echo "GRAPHQL_FEATURE_PACK_URL=https://github.com/wildfly-extras/wildfly-graphql-feature-pack/releases/download/${PATH}" >> $GITHUB_ENV
 
     - name: build and push the graphql image
       run: >
