--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -54,7 +54,7 @@ jobs:
 
     - name: set GraphQL Feature Pack URL
       run:
-        case "${{MAJOR_MINOR_WF_VERSION}}" in
+        case "${{env.MAJOR_MINOR_WF_VERSION}}" in
         26.0|26.1)
           PATH=1.8.0.Final/wildfly-26.0.0.Final-mp-graphql-1.8.0.Final-overlay.zip
           ;;
@@ -73,6 +73,5 @@ jobs:
         --tag rdohna/wildfly:${{matrix.wf}}-jdk${{matrix.jdk}}-graphql
         ${{env.LATEST_TAG}}
         --build-arg BASE_VERSION=${{env.MAJOR_MINOR_WF_VERSION}}-jdk${{matrix.jdk}}
-        --build-arg GRAPHQL_FEATURE_PACK_VERSION=${{env.GRAPHQL_FEATURE_PACK_VERSION}}
-        --build-arg GRAPHQL_FEATURE_PACK_WILDFLY_VERSION=${{env.MAJOR_WF_VERSION}}.0.0
+        --build-arg GRAPHQL_FEATURE_PACK_URL=${{env.GRAPHQL_FEATURE_PACK_URL}}
         --file Dockerfile-graphql
